--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-dialog": "^2.6.0",
     "@tauri-apps/plugin-opener": "^2",
+    "@tauri-apps/plugin-sql": "^2.3.1",
     "framer-motion": "^12.27.1",
     "lucide-react": "^0.562.0",
     "pdfjs-dist": "^5.4.530",
