--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,4 +25,7 @@ serde_json = "1"
 rusqlite = { version = "0.31.0", features = ["bundled"] }
 tauri-plugin-dialog = "2"
 window-vibrancy = "0.5.2"
+tauri-plugin-sql = { version = "2", features = ["sqlite"] }
+sha2 = "0.10"
+hex = "0.4"
 
